# jellyfin-letterboxd-sync

./: README.md  jellyfin_letterboxd_sync.py  main.py  pyproject.toml  release.sh
.github/workflows/: publish.yml  test.yml
