[project]
name = "jellyfin-letterboxd-sync"
version = "0.1.0"
description = "Sync watched status from Jellyfin to Letterboxd"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.57.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/zianwar/jellyfin-letterboxd-sync"
Changelog = "https://github.com/zianwar/jellyfin-letterboxd-sync/releases"
Issues = "https://github.com/zianwar/jellyfin-letterboxd-sync/issues"
CI = "https://github.com/zianwar/jellyfin-letterboxd-sync/actions"

[project.scripts]
jellyfin-letterboxd-sync = "jellyfin_letterboxd_sync:main"
